added room page and fixed all bugs

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,9 @@
 		<div id="container">
 			<nav>
 				<ul>
-					<li class="first"><a href="#">Rooms & Facilities</a></li>
+					<li class="first">
+						<a href="rooms.html">Rooms & Facilities</a>
+					</li>
 					<li class="second"><a href="index.html">HotelGH</a></li>
 					<li class="third"><a href="contact.html">Contact Us</a></li>
 				</ul>
@@ -85,6 +87,7 @@
 					<button>Send Message</button>
 				</div>
 			</main>
+
 			<footer>
 				<article id="footFirst">
 					<h2>HotelGH</h2>
