--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
 		<title>Hotel GH</title>
 		<link rel="stylesheet" href="./public/lib/Bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="./public/css/home.css" />
+		 <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
 	</head>
 	<body>
 		<div id="landing-page">
 			<nav>
 				<ul>
 					<li>
-						<a class="nav-links" href="#">Rooms & Facilities</a>
+						<a class="nav-links" href="rooms.html">Rooms & Facilities</a>
 					</li>
 					<li id="brand-name">
 						<a class="nav-links" href="index.html">Hotel GH</a>
@@ -24,7 +30,7 @@
 				<h1 id="heading">HotelGH.</h1>
 			</header>
 			<div id="booking-button">
-				<button class="btn">Book a room!</button>
+				<button type="button" class="btn btn-link">Book a room!</button>
 			</div>
 			<div id="landing-image-container">
 				<img
@@ -126,11 +132,17 @@
 					<div class="row">
 						<div class="col-md-4 card">
 							<img
-								src="./public/images/Home Page/hotelPics/bedroom.png"
+								src="./public/images/Home Page/hotelPics/hotel1.jpg"
 								class="card-img-top"
 								alt="image of hotel bedroom"
 							/>
 							<div class="card-body">
+							                <h3>Executive Room</h3>
+											<i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="far fa-star"></i>
 								<p class="card-text">
 									Our Executive Room allows guests to relax in
 									a large lounge area with natural light,
@@ -143,34 +155,43 @@
 
 						<div class="col-md-4 card">
 							<img
-								src="./public/images/Home Page/hotelPics/bedroom.png"
+								src="./public/images/Home Page/hotelPics/hotel2.png"
 								class="card-img-top"
 								alt="image of hotel bedroom"
 							/>
 							<div class="card-body">
+							                <h3>Single Room with Pool</h3>
+						                    <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+											<i class="far fa-star"></i>
 								<p class="card-text">
-									Our Executive Room allows guests to relax in
-									a large lounge area with natural light,
-									enjoy an extensive selection of drinks from
-									the minibar, and browse a range of daily
-									newspapers and magazines.
+									Our Single Room provide you with the opportinity to enjoy yourself 
+									alone without sharing your room with anyone. We have indoor pool for
+									people.
 								</p>
 							</div>
 						</div>
 
 						<div class="col-md-4 card">
 							<img
-								src="./public/images/Home Page/hotelPics/bedroom.png"
+								src="./public/images/Home Page/hotelPics/hotel3.jpg"
 								class="card-img-top"
 								alt="image of hotel bedroom"
 							/>
 							<div class="card-body">
+                                         <h3>Presidential Room</h3>
+			                              <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="far fa-star"></i>
 								<p class="card-text">
-									Our Executive Room allows guests to relax in
-									a large lounge area with natural light,
-									enjoy an extensive selection of drinks from
-									the minibar, and browse a range of daily
-									newspapers and magazines.
+									The expansive Presidential Suite boasts a 
+									seperate living area and two bedrooms, ideal for familie and friends. 
+									Enjoy a hot drink from the coffee machine, while unwinding in your 
+									bathrobes.
 								</p>
 							</div>
 						</div>
@@ -178,7 +199,8 @@
 				</section>
 
 				<div id="center">
-					<button class="see-more-button">See More!</button>
+				<!--Add rooms and facilities here-->
+				<button a href="#" class="btn btn-link">See More!</button>
 				</div>
 
 				<section id="advertisement">
